gitops/apps/shop/orders-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shop-orders
spec:
  selector:
    app: shop-orders
  ports:
    - {name: http, port: 80, targetPort: http}
