gitops/apps/shop/payments-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shop-payments
spec:
  selector:
    app: shop-payments
  ports:
    - {name: http, port: 80, targetPort: http}
